# srechallenge

./: .gitignore  Dockerfile  README.md  SLOs-and-Monioring.md  dumbkv.py  logging.yaml  main.py  pyproject.toml
.github/workflows/: build.yaml  test-postgresql.yaml  test-sqlite.yaml
manifests/: README.md
manifests/base/: deployment.yaml  pvc.yaml  service.yaml
manifests/ingress/: cluster-issuer.yaml  ingress.yaml
manifests/overlays/monitoring/: kustomization.yaml  servicemonitor.yaml
manifests/overlays/postgresql/: kustomization.yaml  postgres-config.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml
manifests/overlays/sqlite/: kustomization.yaml
tests/: conftest.py  test_dumbkv.py
ui/: index.html
