[project]
name = "DumbKV"
version = "0.1.0"
description = "A really bad KV server, you shouldn't use this at all"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.6",
    "fastapi>=0.116.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
